business_theme/static/css/index.css
.jumbotron {
    margin-bottom: 0px;
}

.jumbotron {
    background-color: lightblue;
  }

  .jumbotron h1 {
    font-family: 'Charmonman', cursive;
  }
  .jumbotron p {
    font-family: 'Roboto', sans-serif;
  }


  #main-slider {
    position: relative;
  }
  #main-slider .carousel h2 {
    font-size: 36px;
  }

  #main-slider .carousel .btn:hover {
    background-color: rgba(255, 255, 255, 0.3);
  }
  #main-slider .carousel .boxed {
    padding: 10px 15px;
    background-color: rgba(0, 0, 0, 0.8);
    display: inline-block;
  }
  #main-slider .carousel .item {
    background-position: 50%;
    background-repeat: no-repeat;
    background-size: cover;
    left: 0 !important;
    opacity: 0;
    top: 0;
    position: absolute;
    width: 100%;
    display: block !important;
    height: 600px;
    -webkit-transition: opacity ease-in-out 500ms;
    -moz-transition: opacity ease-in-out 500ms;
    -o-transition: opacity ease-in-out 500ms;
    transition: opacity ease-in-out 500ms;
  }
  #main-slider .carousel .item:first-child {
    top: auto;
    position: relative;
  }
  #main-slider .carousel .item.active {
    opacity: 1;
    -webkit-transition: opacity ease-in-out 500ms;
    -moz-transition: opacity ease-in-out 500ms;
    -o-transition: opacity ease-in-out 500ms;
    transition: opacity ease-in-out 500ms;
    z-index: 1;
  }
  /* #main-slider .left,
  #main-slider .right {
    position: absolute;
    top: 50%;
    background-color: rgba(0, 0, 0, 0.3);
    color: #fff;
    display: inline-block;
    margin-top: -25px;
    font-size: 24px;
    height: 50px;
    width: 50px;
    line-height: 50px;
    text-align: center;
    border-radius: 4px;
    z-index: 5;
  }
  #main-slider .left:hover,
  #main-slider .right:hover {
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 10px;
  }
  #main-slider .left {
    left: 10px;
  }
  #main-slider .right {
    right: 10px;
  } */
  #main-slider .active .animation.animated-item-1 {
    -webkit-animation: fadeInUp 300ms linear 300ms both;
    -moz-animation: fadeInUp 300ms linear 300ms both;
    -o-animation: fadeInUp 300ms linear 300ms both;
    -ms-animation: fadeInUp 300ms linear 300ms both;
    animation: fadeInUp 300ms linear 300ms both;
  }
  #main-slider .active .animation.animated-item-2 {
    -webkit-animation: fadeInUp 300ms linear 600ms both;
    -moz-animation: fadeInUp 300ms linear 600ms both;
    -o-animation: fadeInUp 300ms linear 600ms both;
    -ms-animation: fadeInUp 300ms linear 600ms both;
    animation: fadeInUp 300ms linear 600ms both;
  }
  #main-slider .active .animation.animated-item-3 {
    -webkit-animation: fadeInUp 300ms linear 900ms both;
    -moz-animation: fadeInUp 300ms linear 900ms both;
    -o-animation: fadeInUp 300ms linear 900ms both;
    -ms-animation: fadeInUp 300ms linear 900ms both;
    animation: fadeInUp 300ms linear 900ms both;
  }
  #main-slider .active .animation.animated-item-4 {
    -webkit-animation: fadeInUp 300ms linear 1200ms both;
    -moz-animation: fadeInUp 300ms linear 1200ms both;
    -o-animation: fadeInUp 300ms linear 1200ms both;
    -ms-animation: fadeInUp 300ms linear 1200ms both;
    animation: fadeInUp 300ms linear 1200ms both;
  }



  
#main-slider .carousel-indicators {
  margin: 10px 0 0;
  overflow: auto;
  position: static;
  text-align: left;
  white-space: nowrap;
  width: 100%;
}

#main-slider .carousel-indicators li {
  background-color: transparent;
  -webkit-border-radius: 0;
  border-radius: 0;
  display: inline-block;
  height: auto;
  margin: 0 !important;
  width: auto;
}

#main-slider .carousel-indicators li img {
  display: block;
  opacity: 0.5;
}

#main-slider .carousel-indicators li.active img {
  opacity: 1;
}

#main-slider .carousel-indicators li:hover img {
  opacity: 0.75;
}

#main-slider .carousel-outer {
  position: relative;
}

